[workspace]
resolver = "2"
members = ["examples", "summa-core", "summa-proto", "summa-server", "summa-wasm"]

[profile.release]
lto = true
strip = "debuginfo"

[workspace.dependencies]
anyhow = "1.0"
async-broadcast = "0.5"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.3"
cid = "0.9"
clap = { version = "4.0", features = ["cargo"] }
config = "0.13"
derive_builder = "0.12"
downcast-rs = "1.2"
fasteval2 = { version = "2.1.1", features = ["unsafe-vars"] }
futures = "0.3"
instant = { version = "0.1", default_features = false, features = [ "inaccurate", "wasm-bindgen" ] }
itertools = "0.10"
kanal = "0.1.0-pre8"
lazy_static = "1.4"
lru = "0.9"
once_cell = "1.16"
oneshot = "0.1"
parking_lot = { version = "0.12", features = ["send_guard"] }
pest = "2.5"
pest_derive = "2.5"
prost = "0.11"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.6.1"
serde = { version = "1.0", default_features = false, features = ["derive", "std"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
strfmt = "0.2"
summa-proto = { version = "0.20.0", path = "./summa-proto", default_features = false }
take_mut = "0.2"
tantivy = { git = "https://github.com/izihawa/tantivy", branch = "feature/summa", default_features = false, features = ["quickwit", "zstd-compression"] }
tantivy-query-grammar = { git = "https://github.com/izihawa/tantivy", branch = "feature/summa" }
thiserror = "1.0"
time = { version = "0.3", features = ["serde-well-known", "wasm-bindgen"] }
tokio = { version = "1.25", default_features = false }
tracing = "0.1"
