[workspace]
resolver = "2"
members = ["examples", "ipfs-hamt-directory", "ipfs-hamt-directory-py", "summa-core", "summa-proto", "summa-embed-py", "summa-server", "summa-wasm"]

[profile.release]
lto = true
strip = "debuginfo"

[workspace.dependencies]
anyhow = "1.0"
async-broadcast = "0.5"
async-trait = "0.1"
base64 = "0.21"
bytes = "1.3"
clap = { version = "4.0", features = ["cargo"] }
config = "0.13"
derive_builder = "0.12"
downcast-rs = "1.2"
fasteval2 = { version = "2.1.1", features = ["unsafe-vars"] }
futures = "0.3"
hyper = { version = "0.14", default_features = false, features = ["client", "http1", "http2", "tcp"] }
hyper-tls = { version = "0.5.0", features = ["vendored"] }
instant = { version = "0.1", default_features = false, features = [ "inaccurate", "wasm-bindgen" ] }
itertools = "0.11.0"
lazy_static = "1.4"
libz-sys = { version = "1.1", features = ["static"] }
lru = "0.11.1"
oneshot = "0.1"
openssl = { version = "=0.10.55", features = ["vendored"] }
openssl-src = { version = "=111" }
openssl-sys = { version = "=0.9.89" }
parking_lot = { version = "0.12", features = ["send_guard"] }
pest = "2.5"
pest_derive = "2.5"
prost = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.6.1"
regex = "1.8"
serde = { version = "1.0", default_features = false, features = ["derive", "std"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8" }
strfmt = "0.2"
summa-proto = { version = "0.36.0", path = "./summa-proto", default_features = false }
take_mut = "0.2"
tantivy = { package = "izihawa-tantivy", version = "0.21.1", default_features = false, features = ["quickwit", "zstd-compression"] }
tantivy-common = { package = "izihawa-tantivy-common", version = "0.6.0" }
tantivy-query-grammar = { package = "izihawa-tantivy-query-grammar", version = "0.21.0" }
thiserror = "1.0"
time = { version = "0.3", features = ["serde-well-known", "wasm-bindgen"] }
tokio = { version = "1.32", default_features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
