load("@pip_modules//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "aiosumma",
    srcs = glob(["**/*.py"]),
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("pyyaml"),
        "//library/aiogrpcclient",
        "//summa/proto:proto_grpc_py",
    ],
)

py_binary(
    name = "cli",
    srcs = glob(["**/*.py"]),
    main = "cli.py",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("fire"),
        ":aiosumma",
    ],
)

py_wheel(
    name = "aiosumma-wheel",
    author = "Pasha Podolsky",
    author_email = "ppodolsky@me.com",
    classifiers = [
        "Programming Language :: Python :: 3.9",
        "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    ],
    distribution = "aiosumma",
    entry_points = {"console_scripts": ["summa-client = summa.aiosumma.cli:main"]},
    homepage = "https://github.com/izihawa/aiosumma",
    license = "MIT License",
    python_requires = ">=3.9",
    python_tag = "py3",
    requires = [
        "aiogrpcclient >= 1.0.2",
        "fire >= 0.3.1",
    ],
    strip_path_prefixes = ["summa/proto/proto_grpc_py_pb"],
    version = "2.0.17",
    deps = [
        ":aiosumma",
        "//summa/proto:proto_grpc_py",
    ],
)
