[package]
name = "examples"
version = "0.0.0"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
publish = false

[dependencies]
serde_json = "1.0"
summa-proto = { workspace = true, features = ["grpc"] }
tokio = "1"
tonic = { version = "0.12", features = ["channel"] }

[[example]]
name = "proto_client"
path = "proto_client.rs"