[build-system]
requires = ["maturin>=1.4.0,<1.5.0"]
build-backend = "maturin"

[project]
name = "ipfs_hamt_directory_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
