[package]
edition = "2021"
name = "ipfs-hamt-directory"
version = "0.1.1"
license-file = "LICENSE"
description = "Creation of large HAMT-sharded directories"
homepage = "https://github.com/izihawa/summa/tree/master/ipfs-hamt-directory"
repository = "https://github.com/izihawa/summa/tree/master/ipfs-hamt-directory"
readme = "README.md"

[lib]
name = "ipfs_hamt_directory"
path = "src/lib.rs"
doc = true

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bitvec = "1.0"
cid = "0.10"
fastmurmur3 = "0.1"
format-bytes = "0.3"
minicbor = { version = "0.19", features = ["derive", "std"] }
multihash = "0.18"
prost = "0.11"
rayon = "1.7"
rust-unixfs = "0.3"
serde_json = "1.0"
sled = "0.34"
summa-proto = "0.26"
unsigned-varint = "0.7"
