[package]
name = "summa-core"
version = "0.23.3"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Summa Core library"
include = ["src/**/*", "resources/**/*", "LICENSE"]

[lib]
name = "summa_core"
path = "src/lib.rs"
doc = true

[features]
fs = ["tantivy/mmap", "tokio/fs"]
hyper-external-request = ["hyper", "hyper-tls", "openssl", "openssl-src", "openssl-sys"]
metrics = ["opentelemetry"]
tokio-rt = ["tokio/rt"]

[dev-dependencies]
matches = "0.1"

[dependencies]
aho-corasick = "1.0"
anyhow = { workspace = true }
async-trait = { workspace = true }
base36 = "0.0.1"
base64 = { workspace = true }
bytes = { workspace = true }
chrono = "0.4"
config = { workspace = true }
csv = "1.2"
derive_builder = { workspace = true }
downcast-rs = { workspace = true }
fasteval2 = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true, optional = true }
hyper-tls = { workspace = true, optional = true }
instant = { workspace = true }
itertools = { workspace = true }
izihawa_ttl_cache = "0.5"
oneshot = { workspace = true }
openssl = { workspace = true, optional = true }
openssl-src = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }
opentelemetry = { version = "0.20", features = ["metrics", "rt-tokio"], optional = true }
parking_lot = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
pluralize-rs = "0.1"
prost = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rustc-hash = "1.1.0"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strfmt = { workspace = true }
summa-proto = { workspace = true }
take_mut = { workspace = true }
tantivy = { workspace = true }
tantivy-common = { workspace = true }
tantivy-query-grammar = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros", "signal-hook-registry", "sync"] }
tracing = { workspace = true }
xmlparser = "0.13"
