[package]
name = "summa-core"
version = "0.25.1"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Summa Core library"
include = ["src/**/*", "resources/**/*", "LICENSE"]

[lib]
name = "summa_core"
path = "src/lib.rs"
doc = true

[features]
fs = ["tantivy/mmap", "tokio/fs"]
external-request = ["hyper", "hyper-tls", "openssl", "openssl-src", "openssl-sys"]
metrics = ["opentelemetry"]
tokio-rt = ["tokio/rt"]

[dependencies]
aho-corasick = "1.0"
anyhow = { workspace = true }
async-trait = { workspace = true }
base36 = "0.0.1"
base64 = { workspace = true }
config = { workspace = true }
csv = "1.2"
derive_builder = { workspace = true }
fasteval2 = { workspace = true }
futures = { workspace = true }
hyper = { version = "0.14", optional = true, default-features = false, features = ["client", "http1"] }
hyper-tls = { version = "^0.5", optional = true, default-features = false  }
openssl = { workspace = true, features = ["vendored"], optional = true }
openssl-src = { workspace = true, optional = true }
openssl-sys = { workspace = true, optional = true }
instant = { workspace = true }
itertools = { workspace = true }
izihawa_ttl_cache = "0.5"
opentelemetry = { version = "0.20", features = ["metrics", "rt-tokio"], optional = true }
parking_lot = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
pluralize-rs = "0.1"
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strfmt = { workspace = true }
summa-proto = { workspace = true }
take_mut = { workspace = true }
tantivy = { workspace = true }
tantivy-common = { workspace = true }
tantivy-query-grammar = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["macros", "signal-hook-registry", "sync"] }
tracing = { workspace = true }
xmlparser = "0.13"
chrono = "0.4.39"
