load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "summa-directory",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = all_crate_deps(build = True),
    version = "0.1.0",
)
