load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "summa-directory",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@crate_index//:instant",
        "@crate_index//:lru",
        "@crate_index//:serde",
        "@crate_index//:serde_cbor",
        "@crate_index//:tantivy",
        "@crate_index//:time",
    ],
    proc_macro_deps = [
        "@crate_index//:async-trait",
    ],
    version = "0.1.0",
)
