[package]
name = "summa-directory"
version = "0.1.0"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"

[lib]
name = "summa_directory"
path = "src/lib.rs"
doc = true

[dependencies]
async-trait = "0.1.57"
instant = { version = "0.1", features = [ "stdweb" ] }
lru = "0.8.0"
serde = "1"
serde_cbor = "0.11"
serde_json = "1"
tantivy = { version = "0.18.0", default_features = false, features = ["quickwit", "lz4-compression"] }
time = { version = "0.3.14", features = ["wasm-bindgen"] }