[package]
name = "summa-embed-py"
version = "0.15.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "summa_embed"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
prost = { workspace = true }
pyo3 = { version = "0.18", features = ["serde"] }
pyo3-asyncio = { version =  "0.18", features = ["attributes", "tokio-runtime"] }
serde_json = "1.0"
summa-core = { version = "0.15.16", path = "../summa-core", default_features = false, features = ["fs", "hyper-external-request", "tokio-rt"] }
summa-proto = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }