[build-system]
requires = ["maturin>=1.4.0,<1.5.0"]
build-backend = "maturin"

[project]
name = "summa_embed"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["dependencies"]


[tool.maturin]
features = ["pyo3/extension-module"]
