[package]
name = "summa-proto"
version = "0.28.1"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Summa search server proto files"

[lib]
name = "summa_proto"
path = "src/lib.rs"
doc = true

[features]
default = ["grpc"]
grpc = ["tonic", "tonic-build", "tonic-reflection"]

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
prost-build = { version = "0.11.0" }
protoc-bin-vendored = "3.0.0"
tonic-build = { version = "0.9", default-features = false, features = ["prost", "transport"], optional = true }

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"
serde = { workspace = true }
tonic = { version = "0.9", features = ["gzip"], optional = true }
tonic-build = { version = "0.9", default-features = false, features = ["prost", "transport"], optional = true }
tonic-reflection = { version = "0.9", optional = true }