[package]
name = "summa-proto"
version = "0.36.1"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
license-file = "LICENSE"
description = "Summa search server proto files"

[lib]
name = "summa_proto"
path = "src/lib.rs"
doc = true

[features]
default = ["grpc"]
grpc = ["tonic", "tonic-build", "tonic-reflection"]

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
prost-build = { version = "0.12" }
protoc-bin-vendored = "3.0.0"
tonic-build = { version = "0.10", default-features = false, features = ["prost", "transport"], optional = true }

[dependencies]
prost = "0.12"
prost-types = "0.12"
serde = { workspace = true }
tonic = { version = "0.10", features = ["gzip"], optional = true }
tonic-build = { version = "0.10", default-features = false, features = ["prost", "transport"], optional = true }
tonic-reflection = { version = "0.10", optional = true }