load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "summa_server",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    edition = "2021",
    deps = all_crate_deps() + [
        "//summa-core",
        "//summa-directory",
        "//summa:summa_proto",
    ],
    version = "0.9.0",
)

rust_test(
    name = "test",
    crate = ":summa",
    deps = [
        "//summa:summa_proto"
    ],
)

rust_image(
    name = "summa-server-image",
    srcs = glob(["src/bin/**/*.rs"]),
    base = "@izihawa-base-image//image",
    edition = "2021",
    deps = ["@crate_index//:tokio", ":summa_server"],
)

container_push(
   name = "push-summa-server",
   image = ":summa-server-image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "izihawa/summa-server",
   tag = "latest",
)

container_push(
   name = "push-summa-server-testing",
   image = ":summa-server-image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "izihawa/summa-server",
   tag = "testing",
)

