[package]
edition = "2021"
name = "summa-server"
version = "0.15.0"
license-file = "LICENSE"
description = "Fast full-text search server"
homepage = "https://github.com/izihawa/summa"
repository = "https://github.com/izihawa/summa"
keywords = ["async", "search", "server", "grpc"]

[lib]
name = "summa_server"
path = "src/lib.rs"
doc = false

[[bin]]
name = "summa-server-bin"
path = "src/bin/main.rs"
doc = false

[features]
default = ["metrics"]
metrics = ["opentelemetry", "opentelemetry-prometheus", "prometheus", "summa-core/metrics"]

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
tonic-build = { version = "0.9.1", default-features = false, features = ["prost", "transport"] }

[dev-dependencies]
summa-core = { version = "0.15.2", path = "../summa-core", features = ["fs", "hyper-external-request", "tokio-rt"] }
tempdir = "0.3.7"

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
config = "0.13"
derive_builder = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
headers = "0.3"
hyper = { workspace = true }
itertools = { workspace = true }
libz-sys = { workspace = true }
opentelemetry = { version = "0.19", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry-prometheus = { version = "0.12", optional = true }
path-absolutize = "3.0"
prometheus = { version = "0.13", optional = true }
prost = { workspace = true }
prost-types = "0.11"
rand = { workspace = true }
rdkafka = { version = "0.29" }
rlimit = "0.9"
serde = { workspace = true }
serde_derive = "1.0"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
summa-core = { version = "0.15.2", path = "../summa-core", features = ["fs", "hyper-external-request", "tokio-rt"] }
summa-proto = { workspace = true, features = ["grpc"] }
take_mut = { workspace = true }
tantivy = { workspace = true }
tantivy-fst = "0.4.0"
time = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
tonic = { version = "0.9", features = ["gzip"] }
tonic-reflection = "0.9"
tonic-web = { version = "0.9" }
tower = "0.4"
tower-http = { version = "0.4", features = ["set-header", "trace"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
